# ptt

./: .gitignore  LICENSE  Pipfile  README.md  setup.cfg  test.py
scripts/: add-peer  clear-db  clear-files  connect-peer  generate-cert  restart-daemon  test-texting  texting
src/ptt/: app.py  cli.py  common.py  conn.py  const.py  daemon.py  peer.py  pollqueue.py  ptt_cli.py  pttd_cli.py
