[metadata]
name = ppt
version = 0.0.1
author = Zachary Balder
author_email = zmbalder@gmail.com
description =
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zbo14/ptt
project_urls =
    Bug Tracker = https://github.com/zbo14/ptt/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Unix/macOS

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ptt = ptt.cli:run
